cmake_minimum_required(VERSION 3.8)
project(torcs_1_3_6)

set(CMAKE_CXX_STANDARD 11)

include_directories(src/interfaces
        src/libs/iceapi/utils
        src/libs/iceapi/
        src/drivers/scr_server
        src/libs/tgf
        src/libs/tgfclient
        src/libs/client
        src/libs/learning
        src/libs/math
        src/libs/musicplayer
        src/libs/portability
        src/libs/racescreens
        src/libs/raceengineclient
        src/libs/robottools
        src/libs/txml
        src/linux
        $ENV{HOME}/anaconda3/include/qt
        )
set(SOURCE_FILES
        src/doc/torcsdoc.h
        src/drivers/berniw/berniw.cpp
        src/drivers/berniw/berniw.h
        src/drivers/berniw/linalg.h
        src/drivers/berniw/mycar.cpp
        src/drivers/berniw/mycar.h
        src/drivers/berniw/pathfinder.cpp
        src/drivers/berniw/pathfinder.h
        src/drivers/berniw/spline.cpp
        src/drivers/berniw/spline.h
        src/drivers/berniw/trackdesc.cpp
        src/drivers/berniw/trackdesc.h
        src/drivers/berniw2/berniw.h
        src/drivers/berniw2/berniw2.cpp
        src/drivers/berniw2/linalg.h
        src/drivers/berniw2/mycar.cpp
        src/drivers/berniw2/mycar.h
        src/drivers/berniw2/pathfinder.cpp
        src/drivers/berniw2/pathfinder.h
        src/drivers/berniw2/spline.cpp
        src/drivers/berniw2/spline.h
        src/drivers/berniw2/trackdesc.cpp
        src/drivers/berniw2/trackdesc.h
        src/drivers/berniw3/berniw.h
        src/drivers/berniw3/berniw3.cpp
        src/drivers/berniw3/linalg.h
        src/drivers/berniw3/mycar.cpp
        src/drivers/berniw3/mycar.h
        src/drivers/berniw3/pathfinder.cpp
        src/drivers/berniw3/pathfinder.h
        src/drivers/berniw3/spline.cpp
        src/drivers/berniw3/spline.h
        src/drivers/berniw3/trackdesc.cpp
        src/drivers/berniw3/trackdesc.h
        src/drivers/bt/bt.cpp
        src/drivers/bt/cardata.cpp
        src/drivers/bt/cardata.h
        src/drivers/bt/driver.cpp
        src/drivers/bt/driver.h
        src/drivers/bt/learn.cpp
        src/drivers/bt/learn.h
        src/drivers/bt/opponent.cpp
        src/drivers/bt/opponent.h
        src/drivers/bt/pit.cpp
        src/drivers/bt/pit.h
        src/drivers/bt/spline.cpp
        src/drivers/bt/spline.h
        src/drivers/bt/strategy.cpp
        src/drivers/bt/strategy.h
        src/drivers/damned/cardata.cpp
        src/drivers/damned/cardata.h
        src/drivers/damned/damned.cpp
        src/drivers/damned/driver.cpp
        src/drivers/damned/driver.h
        src/drivers/damned/learn.cpp
        src/drivers/damned/learn.h
        src/drivers/damned/opponent.cpp
        src/drivers/damned/opponent.h
        src/drivers/damned/pit.cpp
        src/drivers/damned/pit.h
        src/drivers/damned/spline.cpp
        src/drivers/damned/spline.h
        src/drivers/damned/strategy.cpp
        src/drivers/damned/strategy.h
        "src/drivers/human/human (copy).cpp"
        src/drivers/human/human.cpp
        src/drivers/human/human.h
        src/drivers/human/pref.cpp
        src/drivers/human/pref.h
        src/drivers/inferno/berniw.h
        src/drivers/inferno/inferno.cpp
        src/drivers/inferno/mycar.cpp
        src/drivers/inferno/mycar.h
        src/drivers/inferno/pathfinder.cpp
        src/drivers/inferno/pathfinder.h
        src/drivers/inferno/spline.cpp
        src/drivers/inferno/spline.h
        src/drivers/inferno/trackdesc.cpp
        src/drivers/inferno/trackdesc.h
        src/drivers/inferno2/common.cpp
        src/drivers/inferno2/common.h
        src/drivers/inferno2/inferno2.cpp
        src/drivers/lliaw/berniw.h
        src/drivers/lliaw/lliaw.cpp
        src/drivers/lliaw/mycar.cpp
        src/drivers/lliaw/mycar.h
        src/drivers/lliaw/pathfinder.cpp
        src/drivers/lliaw/pathfinder.h
        src/drivers/lliaw/spline.cpp
        src/drivers/lliaw/spline.h
        src/drivers/lliaw/trackdesc.cpp
        src/drivers/lliaw/trackdesc.h
        src/drivers/olethros/cardata.cpp
        src/drivers/olethros/cardata.h
        src/drivers/olethros/driver.cpp
        src/drivers/olethros/driver.h
        src/drivers/olethros/geometry.cpp
        src/drivers/olethros/geometry.h
        src/drivers/olethros/learn.cpp
        src/drivers/olethros/learn.h
        src/drivers/olethros/linalg.h
        src/drivers/olethros/olethros.cpp
        src/drivers/olethros/opponent.cpp
        src/drivers/olethros/opponent.h
        src/drivers/olethros/pit.cpp
        src/drivers/olethros/pit.h
        src/drivers/olethros/spline.cpp
        src/drivers/olethros/spline.h
        src/drivers/olethros/strategy.cpp
        src/drivers/olethros/strategy.h
        src/drivers/olethros/TrackData.cpp
        src/drivers/olethros/TrackData.h
        src/drivers/olethros/Trajectory.cpp
        src/drivers/olethros/Trajectory.h
        src/drivers/scr_server/CarControl.cpp
        src/drivers/scr_server/CarControl.h
        src/drivers/scr_server/scr_server.cpp
        src/drivers/scr_server/SimpleParser.cpp
        src/drivers/scr_server/SimpleParser.h
        src/drivers/sparkle/driver.cpp
        src/drivers/sparkle/driver.h
        src/drivers/sparkle/linalg.h
        src/drivers/sparkle/opponent.cpp
        src/drivers/sparkle/opponent.h
        src/drivers/sparkle/pit.cpp
        src/drivers/sparkle/pit.h
        src/drivers/sparkle/sparkle.cpp
        src/drivers/sparkle/spline.cpp
        src/drivers/sparkle/spline.h
        src/drivers/tita/berniw.h
        src/drivers/tita/mycar.cpp
        src/drivers/tita/mycar.h
        src/drivers/tita/pathfinder.cpp
        src/drivers/tita/pathfinder.h
        src/drivers/tita/spline.cpp
        src/drivers/tita/spline.h
        src/drivers/tita/tita.cpp
        src/drivers/tita/trackdesc.cpp
        src/drivers/tita/trackdesc.h
        src/interfaces/car.h
        src/interfaces/graphic.h
        src/interfaces/playerpref.h
        src/interfaces/raceman.h
        src/interfaces/replay.h
        src/interfaces/robot.h
        src/interfaces/simu.h
        src/interfaces/telemetry.h
        src/interfaces/track.h
        src/libs/client/client.h
        src/libs/client/entry.cpp
        src/libs/client/errno.cpp
        src/libs/client/exitmenu.cpp
        src/libs/client/exitmenu.h
        src/libs/client/mainmenu.cpp
        src/libs/client/mainmenu.h
        src/libs/client/optionmenu.cpp
        src/libs/client/optionmenu.h
        src/libs/client/splash.cpp
        src/libs/client/splash.h
        src/libs/confscreens/confscreens.h
        src/libs/confscreens/controlconfig.cpp
        src/libs/confscreens/controlconfig.h
        src/libs/confscreens/driverconfig.cpp
        src/libs/confscreens/driverconfig.h
        src/libs/confscreens/graphconfig.cpp
        src/libs/confscreens/graphconfig.h
        src/libs/confscreens/joystickconfig.cpp
        src/libs/confscreens/joystickconfig.h
        src/libs/confscreens/mouseconfig.cpp
        src/libs/confscreens/mouseconfig.h
        src/libs/confscreens/openglconfig.cpp
        src/libs/confscreens/openglconfig.h
        src/libs/confscreens/simuconfig.cpp
        src/libs/confscreens/simuconfig.h
        src/libs/confscreens/soundconfig.cpp
        src/libs/confscreens/soundconfig.h
        src/libs/iceapi/utils/ice_server.cpp
        src/libs/iceapi/utils/ice_server.h
        src/libs/iceapi/utils/liblog.cpp
        src/libs/iceapi/utils/mini_log.cpp
        src/libs/iceapi/utils/mini_log.h
        src/libs/iceapi/utils/msp_log.h
        src/libs/iceapi/utils/race.cpp
        src/libs/iceapi/utils/race.h
        src/libs/iceapi/utils/race_bot_scr.cpp
        src/libs/iceapi/utils/race_bot_scr.h
        src/libs/iceapi/utils/stdafx.h
        src/libs/iceapi/utils/utils.h
        src/libs/iceapi/utils/utils_environment.cpp
        src/libs/iceapi/utils/utils_string.cpp
        src/libs/iceapi/utils/recycle_queue.cpp
        src/libs/iceapi/utils/ObstacleSensors.cpp
        src/libs/iceapi/utils/ObstacleSensors.h
        src/libs/iceapi/utils/sensors.cpp
        src/libs/iceapi/utils/sensors.h
        src/libs/iceapi/utils/data.cpp
        src/libs/iceapi/utils/data.h
        src/libs/learning/ANN.cpp
        src/libs/learning/ANN.h
        src/libs/learning/ann_policy.cpp
        src/libs/learning/ann_policy.h
        src/libs/learning/Distribution.cpp
        src/libs/learning/Distribution.h
        src/libs/learning/learn_debug.h
        src/libs/learning/List.cpp
        src/libs/learning/List.h
        src/libs/learning/MathFunctions.cpp
        src/libs/learning/MathFunctions.h
        src/libs/learning/policy.cpp
        src/libs/learning/policy.h
        src/libs/learning/real.h
        src/libs/learning/string_utils.cpp
        src/libs/learning/string_utils.h
        src/libs/math/linalg_t.h
        src/libs/math/straight2_t.h
        src/libs/math/v2_t.h
        src/libs/math/v3_t.h
        src/libs/math/v4_t.h
        src/libs/musicplayer/musicplayer.cpp
        src/libs/musicplayer/musicplayer.h
        src/libs/musicplayer/OggSoundStream.cpp
        src/libs/musicplayer/OggSoundStream.h
        src/libs/musicplayer/OpenALMusicPlayer.cpp
        src/libs/musicplayer/OpenALMusicPlayer.h
        src/libs/musicplayer/SoundStream.cpp
        src/libs/musicplayer/SoundStream.h
        src/libs/portability/portability.h
        src/libs/raceengineclient/raceengine.cpp
        src/libs/raceengineclient/raceengine.h
        src/libs/raceengineclient/racegl.cpp
        src/libs/raceengineclient/racegl.h
        src/libs/raceengineclient/raceinit.cpp
        src/libs/raceengineclient/raceinit.h
        src/libs/raceengineclient/racemain.cpp
        src/libs/raceengineclient/racemain.h
        src/libs/raceengineclient/racemanmenu.cpp
        src/libs/raceengineclient/racemanmenu.h
        src/libs/raceengineclient/raceresults.cpp
        src/libs/raceengineclient/raceresults.h
        src/libs/raceengineclient/racestate.cpp
        src/libs/raceengineclient/racestate.h
        src/libs/raceengineclient/singleplayer.cpp
        src/libs/raceengineclient/singleplayer.h
        src/libs/racescreens/carsetupscreen.cpp
        src/libs/racescreens/driverselect.cpp
        src/libs/racescreens/fileselect.cpp
        src/libs/racescreens/loadingscreen.cpp
        src/libs/racescreens/miscscreens.cpp
        src/libs/racescreens/pitmenu.cpp
        src/libs/racescreens/racemenu.cpp
        src/libs/racescreens/racescreens.h
        src/libs/racescreens/results.cpp
        src/libs/racescreens/trackselect.cpp
        src/libs/robottools/robottools.h
        src/libs/robottools/rttelem.cpp
        src/libs/robottools/rttrack.cpp
        src/libs/tgf/directory.cpp
        src/libs/tgf/hash.cpp
        src/libs/tgf/module.cpp
        src/libs/tgf/os.cpp
        src/libs/tgf/os.h
        src/libs/tgf/params.cpp
        src/libs/tgf/profiler.cpp
        src/libs/tgf/tgf.cpp
        src/libs/tgf/tgf.h
        src/libs/tgf/trace.cpp
        src/libs/tgfclient/control.cpp
        src/libs/tgfclient/fg_gm.cpp
        src/libs/tgfclient/fg_gm.h
        src/libs/tgfclient/glfeatures.cpp
        src/libs/tgfclient/glfeatures.h
        src/libs/tgfclient/gui.cpp
        src/libs/tgfclient/gui.h
        src/libs/tgfclient/guibutton.cpp
        src/libs/tgfclient/guiedit.cpp
        src/libs/tgfclient/guifont.cpp
        src/libs/tgfclient/guifont.h
        src/libs/tgfclient/guihelp.cpp
        src/libs/tgfclient/guiimage.cpp
        src/libs/tgfclient/guilabel.cpp
        src/libs/tgfclient/guimenu.cpp
        src/libs/tgfclient/guimenu.h
        src/libs/tgfclient/guiobject.cpp
        src/libs/tgfclient/guiscrollbar.cpp
        src/libs/tgfclient/guiscrollist.cpp
        src/libs/tgfclient/img.cpp
        src/libs/tgfclient/screen.cpp
        src/libs/tgfclient/screen_properties.h
        src/libs/tgfclient/tgfclient.cpp
        src/libs/tgfclient/tgfclient.h
        src/libs/txml/gennmtab/gennmtab.c
        src/libs/txml/asciitab.h
        src/libs/txml/codepage.h
        src/libs/txml/dllmain.c
        src/libs/txml/filemap.h
        src/libs/txml/gennmtab.c
        src/libs/txml/hashtable.c
        src/libs/txml/hashtable.h
        src/libs/txml/iasciitab.h
        src/libs/txml/latin1tab.h
        src/libs/txml/nametab.h
        src/libs/txml/utf8tab.h
        src/libs/txml/xml.cpp
        src/libs/txml/xml.h
        src/libs/txml/xmldef.h
        src/libs/txml/xmlparse.c
        src/libs/txml/xmlparse.h
        src/libs/txml/xmlrole.c
        src/libs/txml/xmlrole.h
        src/libs/txml/xmltok.c
        src/libs/txml/xmltok.h
        src/libs/txml/xmltok_impl.c
        src/libs/txml/xmltok_impl.h
        src/linux/linuxspec.cpp
        src/linux/linuxspec.h
        src/linux/main.cpp
        src/linux/osspec.h
        src/misc/png2jpg/png2jpg.c
        src/modules/graphic/ssggraph/CarSoundData.cpp
        src/modules/graphic/ssggraph/CarSoundData.h
        src/modules/graphic/ssggraph/grboard.cpp
        src/modules/graphic/ssggraph/grboard.h
        src/modules/graphic/ssggraph/grcam.cpp
        src/modules/graphic/ssggraph/grcam.h
        src/modules/graphic/ssggraph/grcar.cpp
        src/modules/graphic/ssggraph/grcar.h
        src/modules/graphic/ssggraph/grcarlight.cpp
        src/modules/graphic/ssggraph/grcarlight.h
        src/modules/graphic/ssggraph/grloadac.cpp
        src/modules/graphic/ssggraph/grloadsgi.h
        src/modules/graphic/ssggraph/grmain.cpp
        src/modules/graphic/ssggraph/grmain.h
        src/modules/graphic/ssggraph/grmultitexstate.cpp
        src/modules/graphic/ssggraph/grmultitexstate.h
        src/modules/graphic/ssggraph/grscene.cpp
        src/modules/graphic/ssggraph/grscene.h
        src/modules/graphic/ssggraph/grscreen.cpp
        src/modules/graphic/ssggraph/grscreen.h
        src/modules/graphic/ssggraph/grshadow.cpp
        src/modules/graphic/ssggraph/grshadow.h
        src/modules/graphic/ssggraph/grskidmarks.cpp
        src/modules/graphic/ssggraph/grskidmarks.h
        src/modules/graphic/ssggraph/grsmoke.cpp
        src/modules/graphic/ssggraph/grsmoke.h
        src/modules/graphic/ssggraph/grsound.cpp
        src/modules/graphic/ssggraph/grsound.h
        src/modules/graphic/ssggraph/grssgext.h
        src/modules/graphic/ssggraph/grtexture.cpp
        src/modules/graphic/ssggraph/grtexture.h
        src/modules/graphic/ssggraph/grtrackmap.cpp
        src/modules/graphic/ssggraph/grtrackmap.h
        src/modules/graphic/ssggraph/grutil.cpp
        src/modules/graphic/ssggraph/grutil.h
        src/modules/graphic/ssggraph/grvertexarray.h
        src/modules/graphic/ssggraph/grvtxtable.cpp
        src/modules/graphic/ssggraph/grvtxtable.h
        src/modules/graphic/ssggraph/OpenalSoundInterface.cpp
        src/modules/graphic/ssggraph/PlibSoundInterface.cpp
        src/modules/graphic/ssggraph/QSoundChar.h
        src/modules/graphic/ssggraph/sound_defines.h
        src/modules/graphic/ssggraph/SoundInterface.cpp
        src/modules/graphic/ssggraph/SoundInterface.h
        src/modules/graphic/ssggraph/ssggraph.cpp
        src/modules/graphic/ssggraph/TorcsSound.cpp
        src/modules/graphic/ssggraph/TorcsSound.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Basic.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Matrix.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Point.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Quaternion.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Tuple3.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Tuple4.h
        src/modules/simu/simuv2/SOLID-2.0/include/3D/Vector.h
        src/modules/simu/simuv2/SOLID-2.0/include/SOLID/solid.h
        src/modules/simu/simuv2/SOLID-2.0/src/AlgoTable.h
        src/modules/simu/simuv2/SOLID-2.0/src/BBox.h
        src/modules/simu/simuv2/SOLID-2.0/src/BBoxTree.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/BBoxTree.h
        src/modules/simu/simuv2/SOLID-2.0/src/Box.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Box.h
        src/modules/simu/simuv2/SOLID-2.0/src/C-api.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Complex.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Complex.h
        src/modules/simu/simuv2/SOLID-2.0/src/Cone.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Cone.h
        src/modules/simu/simuv2/SOLID-2.0/src/Convex.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Convex.h
        src/modules/simu/simuv2/SOLID-2.0/src/Cylinder.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Cylinder.h
        src/modules/simu/simuv2/SOLID-2.0/src/Encounter.h
        src/modules/simu/simuv2/SOLID-2.0/src/Endpoint.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Endpoint.h
        src/modules/simu/simuv2/SOLID-2.0/src/IndexArray.h
        src/modules/simu/simuv2/SOLID-2.0/src/Object.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Object.h
        src/modules/simu/simuv2/SOLID-2.0/src/Polygon.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Polygon.h
        src/modules/simu/simuv2/SOLID-2.0/src/Polyhedron.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Polyhedron.h
        src/modules/simu/simuv2/SOLID-2.0/src/Polytope.h
        src/modules/simu/simuv2/SOLID-2.0/src/Response.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Response.h
        src/modules/simu/simuv2/SOLID-2.0/src/RespTable.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/RespTable.h
        src/modules/simu/simuv2/SOLID-2.0/src/Shape.h
        src/modules/simu/simuv2/SOLID-2.0/src/Simplex.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Simplex.h
        src/modules/simu/simuv2/SOLID-2.0/src/Sphere.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Sphere.h
        src/modules/simu/simuv2/SOLID-2.0/src/Transform.cpp
        src/modules/simu/simuv2/SOLID-2.0/src/Transform.h
        src/modules/simu/simuv2/SOLID-2.0/src/VertexBase.h
        src/modules/simu/simuv2/aero.cpp
        src/modules/simu/simuv2/aero.h
        src/modules/simu/simuv2/axle.cpp
        src/modules/simu/simuv2/axle.h
        src/modules/simu/simuv2/brake.cpp
        src/modules/simu/simuv2/brake.h
        src/modules/simu/simuv2/car.cpp
        src/modules/simu/simuv2/carstruct.h
        src/modules/simu/simuv2/categories.cpp
        src/modules/simu/simuv2/collide.cpp
        src/modules/simu/simuv2/differential.cpp
        src/modules/simu/simuv2/differential.h
        src/modules/simu/simuv2/engine.cpp
        src/modules/simu/simuv2/engine.h
        src/modules/simu/simuv2/sim.h
        src/modules/simu/simuv2/simu.cpp
        src/modules/simu/simuv2/simuitf.cpp
        src/modules/simu/simuv2/steer.cpp
        src/modules/simu/simuv2/steer.h
        src/modules/simu/simuv2/susp.cpp
        src/modules/simu/simuv2/susp.h
        src/modules/simu/simuv2/transmission.cpp
        src/modules/simu/simuv2/transmission.h
        src/modules/simu/simuv2/wheel.cpp
        src/modules/simu/simuv2/wheel.h
        src/modules/simu/simuv3/aero.cpp
        src/modules/simu/simuv3/aero.h
        src/modules/simu/simuv3/axle.cpp
        src/modules/simu/simuv3/axle.h
        src/modules/simu/simuv3/brake.cpp
        src/modules/simu/simuv3/brake.h
        src/modules/simu/simuv3/car.cpp
        src/modules/simu/simuv3/carstruct.h
        src/modules/simu/simuv3/categories.cpp
        src/modules/simu/simuv3/collide.cpp
        src/modules/simu/simuv3/differential.cpp
        src/modules/simu/simuv3/differential.h
        src/modules/simu/simuv3/engine.cpp
        src/modules/simu/simuv3/engine.h
        src/modules/simu/simuv3/Options.h
        src/modules/simu/simuv3/sim.h
        src/modules/simu/simuv3/simu.cpp
        src/modules/simu/simuv3/simuitf.cpp
        src/modules/simu/simuv3/SimulationOptions.cpp
        src/modules/simu/simuv3/SimulationOptions.h
        src/modules/simu/simuv3/steer.cpp
        src/modules/simu/simuv3/steer.h
        src/modules/simu/simuv3/susp.cpp
        src/modules/simu/simuv3/susp.h
        src/modules/simu/simuv3/transmission.cpp
        src/modules/simu/simuv3/transmission.h
        src/modules/simu/simuv3/wheel.cpp
        src/modules/simu/simuv3/wheel.h
        src/modules/telemetry/telemetry.cpp
        src/modules/telemetry/telemetryitf.cpp
        src/modules/telemetry/tlm.h
        src/modules/track/track.cpp
        src/modules/track/track3.cpp
        src/modules/track/track4.cpp
        src/modules/track/trackinc.h
        src/modules/track/trackitf.cpp
        src/modules/track/trackutil.cpp
        src/tools/accc/ac3dgroup.cpp
        src/tools/accc/ac3dload.cpp
        src/tools/accc/accc.h
        src/tools/accc/mainaccc.cpp
        src/tools/nfs2ac/mainnfs2ac.cpp
        src/tools/nfsperf/mainnfsperf.cpp
        src/tools/texmapper/maintexmapper.cpp
        src/tools/texmapper/ssgLocal.h
        src/tools/texmapper/ssgSaveAC.cpp
        src/tools/trackgen/ac3d.cpp
        src/tools/trackgen/ac3d.h
        src/tools/trackgen/easymesh.cpp
        src/tools/trackgen/easymesh.h
        src/tools/trackgen/elevation.cpp
        src/tools/trackgen/elevation.h
        src/tools/trackgen/maintrackgen.cpp
        src/tools/trackgen/objects.cpp
        src/tools/trackgen/objects.h
        src/tools/trackgen/raceline.cpp
        src/tools/trackgen/relief.cpp
        src/tools/trackgen/relief.h
        src/tools/trackgen/track.cpp
        src/tools/trackgen/trackgen.h
        src/tools/trackgen/util.cpp
        src/tools/trackgen/util.h
        config.h src/libs/iceapi/utils/bot_hook.cpp src/libs/iceapi/utils/bot.cpp src/libs/iceapi/utils/race_server.cpp src/libs/iceapi/utils/race_server.h)

add_executable(torcs_1_3_6 ${SOURCE_FILES})